[tool.poetry]
name = "flask-restapi"
version = "0.2.4"
description = "Flask-RESTAPI is an extension for validate and make OpenAPI docs."
authors = ["jonars <jonarsli13@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JonarsLi/flask-restapi"
repository = "https://github.com/JonarsLi/flask-restapi"
documentation = "https://jonarsli.github.io/flask-restapi/"

[tool.poetry.dependencies]
python = "^3.7"
Flask = {extras = ["async"], version = "^2.0.1"}
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.6"
mkdocstrings = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"